--- a/index.html
+++ b/index.html
@@ -23,12 +23,28 @@
     I studied Electrical engineering at the Hashemite University , Immediately after my graduation, I was employed as sales and technical Engineer at Tal Group.
     To be honest, I did not find myself in the field of electrical engineering much, so I decided to start learning programming. I think it is the language of the age and the most important science now.
     I aspire to develop myself a lot in the field of programming, and get a job in this field. Wish me luck !</p>
+
+    <h2>TOP TEN FAVOURITE FOOTBALL PLAYERS :</h2>
+
+    <ol>
+      <li>Cristiano Ronaldo</li>
+      <li>Sergio Ramos</li>
+      <li>Luka Modric</li>
+      <li>Kylian Mbappé</li>
+      <li>Marcelo</li>
+      <li>Benzema</li>
+      <li> Federico Valverde</li>
+      <li>Toni Kroos</li>
+      <li>Daniel Carvajal</li>
+      <li>Casemero</li>
+    </ol>
       </article>
       
   </main>
   <footer>
 &copy;Dunia Alkilany
-  </footer> 
+  </footer>
+
   <script src="js/app.js"></script>
 
 </body>
