--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
    
       <article>
         
-<p>Hello all
-    I am Dunia Al Kilani ;
-    I studied Electrical engineering at the Hashemite University , Immediately after my graduation, I was employed as sales and technical Engineer at Tal Group.
-    To be honest, I did not find myself in the field of electrical engineering much, so I decided to start learning programming. I think it is the language of the age and the most important science now.
-    I aspire to develop myself a lot in the field of programming, and get a job in this field. Wish me luck !</p>
+
+  <ul>
+    Hello all
+    <li> I am Dunia Al Kilani ;</li> 
+    <li>I studied Electrical engineering at the Hashemite University </li>
+  <li> Immediately after my graduation, I was employed as sales and technical Engineer at Tal Group.</li>
+  <li>To be honest, I did not find myself in the field of electrical engineering much, so I decided to start learning programming.</li>
+    <li> I think it is the language of the age and the most important science now.</li>
+    <li> I aspire to develop myself a lot in the field of programming, and get a job in this field. Wish me luck !</li>
+
+    </ul>
+ 
 
     <h2>TOP TEN FAVOURITE FOOTBALL PLAYERS :</h2>
 
