--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
  
 
     <h2>TOP TEN FAVOURITE FOOTBALL PLAYERS :</h2>
+    <img src="https://i.pinimg.com/originals/1e/11/2e/1e112e0b858a288a1374f529925e4795.gif" alt="FOOTBALL">
 
     <ol>
       <li>Cristiano Ronaldo</li>
@@ -46,6 +47,7 @@
       <li>Casemero</li>
     </ol>
       </article>
+     
       
   </main>
   <footer>
